Archive/0801139b09abb54d5488a2a1cd680b0d-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:200:7: error: use of deleted function ‘mv::owning_ptr<int>& mv::owning_ptr<int>::operator=(const mv::owning_ptr<int>&)’
     b = a;
       ^
main.cpp:9:11: note: ‘mv::owning_ptr<int>& mv::owning_ptr<int>::operator=(const mv::owning_ptr<int>&)’ is implicitly declared as deleted because ‘mv::owning_ptr<int>’ declares a move constructor or move assignment operator
     class owning_ptr {
           ^
